Fix overflowing for toats with very long words.
Former-commit-id: 2705d2e01938ee1972b1d7512be2be47a9c02d8c

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -223,6 +223,11 @@ ruby rt:hover {
   z-index: 999;
 }
 
+.p-toast .p-toast-message .p-toast-message-content .p-toast-message-text {
+  overflow-wrap: break-word;
+  overflow: hidden;
+}
+
 /*
 $color-blue-link: #039be5;
 $color-red-danger: #f44336;
